--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pycountry = "^24.6.1"
 flake8-pyproject="^1.2.3"
 requests = "^2.32.3"
 numpy = "^2.0.0"
+pre-commit = "^3.7.1"
 
 [tool.poetry.scripts]
 run-app = "src.main:main"
