--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ flake8-pyproject="^1.2.3"
 requests = "^2.32.3"
 numpy = "^2.0.0"
 pre-commit = "^3.7.1"
+pillow = "^10.4.0"
+piexif = "^1.1.3"
+geopy = "^2.4.1"
 
 [tool.poetry.scripts]
 run-app = "src.main:main"
