--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ pre-commit = "^3.7.1"
 pillow = "^10.4.0"
 piexif = "^1.1.3"
 geopy = "^2.4.1"
+path = "^16.14.0"
+cdsapi = "^0.7.0"
+pydub = "^0.25.1"
+librosa = "^0.10.2.post1"
+torch = "^2.3.1"
 
 [tool.poetry.scripts]
 run-app = "src.main:main"
