Corrections, Audio/Image Preprocessing, some tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,14 @@ cdsapi = "^0.7.0"
 pydub = "^0.25.1"
 librosa = "^0.10.2.post1"
 torch = "^2.3.1"
+rich = "^13.7.1"
+matplotlib = "^3.9.1"
+pandas = "^2.2.2"
+pyarrow = "^17.0.0"
+fastparquet = "^2024.5.0"
+xarray = "^2024.7.0"
+torchvision = "^0.19.0"
+opencv-python = "^4.10.0.84"
 
 [tool.poetry.scripts]
 run-app = "src.main:main"
