--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,6 @@ data
 
 # folder that contains the credentials for copernicus api
 src/config/era5_config
+
+# folder test data that contains all the files(images, sounds, etc) from sources for testingss
+test_data
