--- a/.gitignore
+++ b/.gitignore
@@ -177,4 +177,5 @@ data
 src/config/era5_config
 
 # folder test data that contains all the files(images, sounds, etc) from sources for testingss
-test_data
+test_data/audio
+test_data/Life
