--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,10 @@ fastparquet = "^2024.5.0"
 xarray = "^2024.7.0"
 torchvision = "^0.19.0"
 opencv-python = "^4.10.0.84"
+scikit-image = "^0.24.0"
+torchtext = "^0.18.0"
+nltk = "^3.9.1"
+textblob = "^0.18.0.post0"
 
 [tool.poetry.scripts]
 run-app = "src.main:main"
