--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ scikit-image = "^0.24.0"
 torchtext = "^0.18.0"
 nltk = "^3.9.1"
 textblob = "^0.18.0.post0"
+netcdf4 = "^1.7.1.post2"
 
 [tool.poetry.scripts]
 run-app = "src.main:main"
