--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,15 @@ netcdf4 = "^1.7.1.post2"
 cachetools = "^5.5.0"
 transformers = "^4.44.2"
 dask = {extras = ["dataframe"], version = "^2024.9.0"}
+ffmpeg = "^1.4"
+geopandas = "^1.0.1"
+cartopy = "^0.24.1"
+scikit-bio = "^0.6.2"
+pyhdf = "^0.11.4"
+pvl = "^1.3.2"
+pds4-tools = "^1.3"
+rasterio = "^1.4.1"
+earthengine-api = "^1.1.4"
 
 [tool.poetry.scripts]
 run-app = "src.main:main"
