--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Stylianos Stasinos <stylianos.stasinos@tno.nl>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.10,<3.13"
 xenopy = "^0.0.4"
 torchaudio = "^2.3.1"
 pycountry = "^24.6.1"
@@ -47,6 +47,14 @@ pvl = "^1.3.2"
 pds4-tools = "^1.3"
 rasterio = "^1.4.1"
 earthengine-api = "^1.1.4"
+apache-airflow = "^2.10.2"
+apache-airflow-providers-postgres = "^5.13.1"
+apache-airflow-providers-celery = "^3.8.3"
+python-dotenv = "^1.0.1"
+pygbif = "^0.6.4"
+country-bounding-boxes = "^0.2.3"
+country-converter = "^1.2"
+reverse-geocode = "^1.6.5"
 
 [tool.poetry.scripts]
 run-app = "src.main:main"
