--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ run-app = "src.main:main"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
+memray = "^1.15.0"
 
 [build-system]
 requires = ["poetry-core"]
