--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,62 +1,67 @@
-[tool.poetry]
+[project]
 name = "src"
 version = "0.2.0"
 description = "BioCube - Engineering a Multimodal Dataset for Biodiversity"
-authors = ["Stylianos Stasinos <stylianos.stasinos@tno.nl>, Martino Mension <martino.mension@tno.nl>, Athanasios Trantas <thanasis.trantas@tno.nl>"]
+authors = [
+    {name = "Stylianos Stasinos",email = "stylianos.stasinos@tno.nl"},
+    {name = "Martino Mensio",email = "martino.mensio@tno.nl"},
+    {name = "Athanasios Trantas",email = "thanasis.trantas@tno.nl"}
+]
 readme = "README.md"
 license = {file = "LICENSE.txt"}
+requires-python = ">=3.10,<3.13"
 
-[tool.poetry.dependencies]
-python = "^3.10,<3.13"
-xenopy = "^0.0.4"
-torchaudio = "^2.5.1"
-pycountry = "^24.6.1"
-flake8-pyproject="^1.2.3"
-requests = "^2.32.3"
-numpy = "^2.0.0"
-pre-commit = "^3.7.1"
-pillow = "^10.4.0"
-piexif = "^1.1.3"
-geopy = "^2.4.1"
-path = "^16.14.0"
-cdsapi = "^0.7.2"
-pydub = "^0.25.1"
-librosa = "^0.10.2.post1"
-torch = "^2.5.1"
-rich = "^13.7.1"
-matplotlib = "^3.9.1"
-pandas = "^2.2.2"
-pyarrow = "^17.0.0"
-fastparquet = "^2024.5.0"
-xarray = "^2024.7.0"
-torchvision = "^0.20.1"
-opencv-python = "^4.10.0.84"
-scikit-image = "^0.24.0"
-torchtext = "^0.18.0"
-nltk = "^3.9.1"
-textblob = "^0.18.0.post0"
-netcdf4 = "^1.7.1.post2"
-cachetools = "^5.5.0"
-transformers = "^4.44.2"
-dask = {extras = ["dataframe"], version = "^2024.9.0"}
-ffmpeg = "^1.4"
-geopandas = "^1.0.1"
-cartopy = "^0.24.1"
-scikit-bio = "^0.6.2"
-pyhdf = "^0.11.4"
-pvl = "^1.3.2"
-pds4-tools = "^1.3"
-rasterio = "^1.4.1"
-earthengine-api = "^1.1.4"
-apache-airflow = "^2.10.2"
-apache-airflow-providers-postgres = "^5.13.1"
-apache-airflow-providers-celery = "^3.8.3"
-python-dotenv = "^1.0.1"
-pygbif = "^0.6.4"
-country-bounding-boxes = "^0.2.3"
-country-converter = "^1.2"
-reverse-geocode = "^1.6.5"
-typer = "^0.13.1"
+dependencies = [
+   "xenopy (>=0.0.4)",
+   "torchaudio (>=2.5.1)",
+   "pycountry (>=24.6.1)",
+   "flake8-pyproject (>=1.2.3)",
+   "requests (>=2.32.3)",
+   "numpy (>=2.0.0)",
+   "pre-commit (>=3.7.1)",
+   "pillow (>=10.4.0)",
+   "piexif (>=1.1.3)",
+   "geopy (>=2.4.1)",
+   "path (>=16.14.0)",
+   "cdsapi (>=0.7.2)",
+   "pydub (>=0.25.1)",
+   "librosa (>=0.10.2.post1)",
+   "torch (>=2.5.1)",
+   "rich (>=13.7.1)",
+   "matplotlib (>=3.9.1)",
+   "pandas (>=2.2.2)",
+   "pyarrow (>=17.0.0)",
+   "fastparquet (>=2024.5.0)",
+   "xarray (>=2024.7.0)",
+   "torchvision (>=0.20.1)",
+   "opencv-python (>=4.10.0.84)",
+   "scikit-image (>=0.24.0)",
+   "torchtext (>=0.18.0)",
+   "nltk (>=3.9.1)",
+   "textblob (>=0.18.0.post0)",
+   "netcdf4 (>=1.7.1.post2)",
+   "cachetools (>=5.5.0)",
+   "transformers (>=4.44.2)",
+   "dask[dataframe] (>=2024.9.0)",
+   "ffmpeg (>=1.4)",
+   "geopandas (>=1.0.1)",
+   "cartopy (>=0.24.1)",
+   "scikit-bio (>=0.6.2)",
+   "pyhdf (>=0.11.4)",
+   "pvl (>=1.3.2)",
+   "pds4-tools (>=1.3)",
+   "rasterio (>=1.4.1)",
+   "earthengine-api (>=1.1.4)",
+   "apache-airflow (>=2.10.2)",
+   "apache-airflow-providers-postgres (>=5.13.1)",
+   "apache-airflow-providers-celery (>=3.8.3)",
+   "python-dotenv (>=1.0.1)",
+   "pygbif (>=0.6.4)",
+   "country-bounding-boxes (>=0.2.3)",
+   "country-converter (>=1.2)",
+   "reverse-geocode (>=1.6.5)",
+   "typer (>=0.13.1)",
+]
 
 [tool.poetry.scripts]
 run-app = "src.main:main"
