--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "bfm-data"
 version = "0.3.0"
-description = "BioCube - Engineering a Multimodal Dataset for Biodiversity"
+description = "BioCube - Engineering a Multimodal Dataset for Biodiversity Research"
 authors = [
     {name = "Stylianos Stasinos"},
     {name = "Martino Mensio"},
@@ -61,6 +61,7 @@ dependencies = [
    "country-converter (>=1.2)",
    "reverse-geocode (>=1.6.5)",
    "typer (>=0.13.1)",
+   "streamlit (>=1.45.1,<2.0.0)",
 ]
 
 [tool.poetry.scripts]
