--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-json
+        exclude_types: [jupyter]
     -   id: check-added-large-files
 
 -   repo: https://github.com/psf/black
